add mutative option to run command to allow server to ask for git diff
